--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-spring.profiles.include=db, s3, email
-spring.profiles.active=${profile}
-logging.level.com.amazonaws.util.EC2MetadataUtils=ERROR
+spring.profiles.include=db, s3, email, test
